// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marking last incorrect answer correct locks toggles 1`] = `
<DocumentFragment>
  <div
    class="TogglesQuestion correct"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        <span>
          Cell wall
        </span>
      </div>
      <div
        class="ToggleOption"
      >
        <span>
          Ribosomes
        </span>
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        <span>
          Cytoplasm
        </span>
      </div>
      <div
        class="ToggleOption"
      >
        <span>
          Chloroplast
        </span>
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="ToggleOption"
      >
        <span>
          Partial membrane
        </span>
      </div>
      <div
        class="ToggleOption selected"
      >
        <span>
          Impermeable membrane
        </span>
      </div>
    </div>
    <h2>
      The answer is correct!
    </h2>
  </div>
</DocumentFragment>
`;

exports[`marking last incorrect answer correct updates status text 1`] = `
<DocumentFragment>
  <div
    class="TogglesQuestion correct"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        <span>
          Cell wall
        </span>
      </div>
      <div
        class="ToggleOption"
      >
        <span>
          Ribosomes
        </span>
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        <span>
          Cytoplasm
        </span>
      </div>
      <div
        class="ToggleOption"
      >
        <span>
          Chloroplast
        </span>
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="ToggleOption"
      >
        <span>
          Partial membrane
        </span>
      </div>
      <div
        class="ToggleOption selected"
      >
        <span>
          Impermeable membrane
        </span>
      </div>
    </div>
    <h2>
      The answer is correct!
    </h2>
  </div>
</DocumentFragment>
`;

exports[`renders the component 1`] = `
<DocumentFragment>
  <div
    class="TogglesQuestion incorrect"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        <span>
          Cell wall
        </span>
      </div>
      <div
        class="ToggleOption"
      >
        <span>
          Ribosomes
        </span>
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="ToggleOption"
      >
        <span>
          Cytoplasm
        </span>
      </div>
      <div
        class="ToggleOption selected"
      >
        <span>
          Chloroplast
        </span>
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        <span>
          Partial membrane
        </span>
      </div>
      <div
        class="ToggleOption"
      >
        <span>
          Impermeable membrane
        </span>
      </div>
    </div>
    <h2>
      The answer is incorrect
    </h2>
  </div>
</DocumentFragment>
`;

exports[`toggling an option marks it as selected 1`] = `
<DocumentFragment>
  <div
    class="TogglesQuestion incorrect"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="ToggleOption"
      >
        <span>
          Cell wall
        </span>
      </div>
      <div
        class="ToggleOption selected"
      >
        <span>
          Ribosomes
        </span>
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="ToggleOption"
      >
        <span>
          Cytoplasm
        </span>
      </div>
      <div
        class="ToggleOption selected"
      >
        <span>
          Chloroplast
        </span>
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        <span>
          Partial membrane
        </span>
      </div>
      <div
        class="ToggleOption"
      >
        <span>
          Impermeable membrane
        </span>
      </div>
    </div>
    <h2>
      The answer is incorrect
    </h2>
  </div>
</DocumentFragment>
`;
